[package]
name = "traffloat-version"
description = "Traffloat build version constants"
homepage = {workspace = true}
license = {workspace = true}
edition = {workspace = true}
repository = {workspace = true}
authors = {workspace = true}
version = {workspace = true}
rust-version = {workspace = true}

build = "build.rs"

[lints]
workspace = true

[build-dependencies]
anyhow = "1.0.51"
git2 = "0.19.0"
hex = "0.4.3"
proc-macro2 = "1.0.29"
quote = "1.0.9"
