[package]
name = "traffloat-view"
description = "Traffloat view manager"
homepage = {workspace = true}
license = {workspace = true}
edition = {workspace = true}
repository = {workspace = true}
authors = {workspace = true}
version = {workspace = true}
rust-version = {workspace = true}

[lints]
workspace = true

[dependencies]
bevy = {workspace = true}
traffloat-base = {workspace = true}
derive_more = "0.99.17"
typed-builder = "0.18.2"
smallvec = "1.13.2"
rand = "0.8.5"
rand_distr = "0.4.3"
bevy_rapier3d = "0.27.0"
kd-tree = "0.6.0"
arrayvec = "0.7.4"
