[package]
name = "traffloat-view"
description = "Traffloat view manager"
homepage = {workspace = true}
license = {workspace = true}
edition = {workspace = true}
repository = {workspace = true}
authors = {workspace = true}
version = {workspace = true}
rust-version = {workspace = true}

[lints]
workspace = true

[dependencies]
bevy = {workspace = true}
traffloat-base = {workspace = true}
derive_more = { version = "1.0.0", features = ["from", "into"] }
typed-builder = "0.19.1"
smallvec = "1.13.2"
rand = "0.8.5"
rand_distr = "0.4.3"
kd-tree = "0.6.0"
arrayvec = "0.7.4"
either = "1.13.0"
serde = { version = "1.0.208", features = ["derive"] }
hex = "0.4.3"
schemars.workspace = true
