[package]
name = "traffloat-save-schema"
description = "Traffloat save schema generation"
homepage = {workspace = true}
license = {workspace = true}
edition = {workspace = true}
repository = {workspace = true}
authors = {workspace = true}
version = {workspace = true}
rust-version = {workspace = true}

[lints]
workspace = true

[dependencies]
traffloat-base = {workspace = true, features = ["schema"]}
traffloat-fluid = {workspace = true}
traffloat-graph = {workspace = true}
traffloat-version = {workspace = true}
traffloat-view = {workspace = true}
bevy = {workspace = true}
schemars = {workspace = true}
anyhow = "1.0.86"
serde_json = "1.0.127"
clap = { version = "4.5.17", features = ["derive"] }
